2008-04-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (SearchProductHistory|AddToProductsList): Use of GtkBuilder.
	(ShowProductDescription|compras_win): Deleted commented code. We
	have VC use it if you want to read old code.
	(FillDataProduct): Deleted function. It was just commented code.
	(AddToProductsList): Use GtkBuilder. Add some brackets.

2008-04-05  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (compras_win): Added GError to gtk_builder_add_from_file
	to check any wrong object.

	* ventas.c (ventas_win): Added GError to gtk_builder_add_from_file
	to check any wrong object.

2008-03-29  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (SearchByName): Changed to void the input vars.

	* ventas.c (BuscarProducto): Eliminated an unuseful cast.

	* compras.c (SearchByName): Use the .ui interface.
	(ClearAllCompraData): Deleted some commented code.

2008-03-23  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (compras_win): Commented all the old code. Added the
	use of GtkBuilder to build the gui.
	(on_barcode_entry_activate|on_buy_barcode_entry_activate): Added
	functions. Doesn't do anything yet
	(AddNew|AddFoundProduct): Commented line that run the SearchProductHistory, this
	should not happend?.

	* config_file.c (rizoma_get_value): Changed the return and input
	types from char * to gchar *.
	Deleted all the tabs and re-indent.

	* Makefile.am (bin_PROGRAMS): Eliminated the creation of
	rizoma-admin while we finish the creation of rizoma-compras.

	* ventas.c (main): Changed the type of *argv[] to **argv. Just style.
	(main): Deleted the code that get the screen size.
	Deleted gint screen_width and gint screen_height.

2006-07-02  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (SearchBarcodeProduct): No nothing is showed if the
	user hasn't put information to search. We prevent large search on
	DB and information not requested.

2006-06-28  Jonathan Gonzalez V.  <zeus@gnu.org>
