@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<!--Generated with glade3 3.4.3 on Sun Apr 27 13:28:26 2008 -->
+<!--Generated with glade3 3.4.3 on Sun Apr 27 19:35:52 2008 -->
 <interface>
   <object class="GtkWindow" id="wnd_compras">
     <property name="title" translatable="yes">Rizoma POS Comercio: Compras</property>
@@ -8,7 +8,7 @@
       <object class="GtkNotebook" id="buy_notebook">
         <property name="visible">True</property>
         <property name="show_border">False</property>
-        <signal handler="on_buy_notebook_change_current_page" name="change_current_page"/>
+        <signal handler="on_buy_notebook_switch_page" name="switch_page"/>
         <child>
           <object class="GtkVBox" id="vbox2">
             <property name="visible">True</property>
@@ -612,11 +612,12 @@
                       </packing>
                     </child>
                     <child>
-                      <object class="GtkButton" id="buy_button">
+                      <object class="GtkButton" id="button_buy">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <property name="receives_default">True</property>
                         <property name="label" translatable="yes">Confirmar Compra</property>
+                        <signal handler="on_button_buy_clicked" name="clicked"/>
                       </object>
                       <packing>
                         <property name="position">1</property>
@@ -654,7 +655,7 @@
                 <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <child>
-                  <object class="GtkTreeView" id="treeview3">
+                  <object class="GtkTreeView" id="tree_view_pending_requests">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="headers_clickable">True</property>
@@ -673,7 +674,7 @@
                 <property name="hscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
                 <child>
-                  <object class="GtkTreeView" id="treeview4">
+                  <object class="GtkTreeView" id="tree_view_pending_request_detail">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="headers_clickable">True</property>
@@ -751,7 +752,7 @@
                             <property name="n_columns">2</property>
                             <property name="column_spacing">5</property>
                             <child>
-                              <object class="GtkLabel" id="label38">
+                              <object class="GtkLabel" id="label_pending_total">
                                 <property name="visible">True</property>
                               </object>
                               <packing>
@@ -764,7 +765,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label37">
+                              <object class="GtkLabel" id="label_pending_other_task_total">
                                 <property name="visible">True</property>
                               </object>
                               <packing>
@@ -777,7 +778,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label36">
+                              <object class="GtkLabel" id="label_pending_task_total">
                                 <property name="visible">True</property>
                               </object>
                               <packing>
@@ -790,7 +791,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label35">
+                              <object class="GtkLabel" id="label_pending_net_total">
                                 <property name="visible">True</property>
                               </object>
                               <packing>
@@ -837,7 +838,7 @@
                               </packing>
                             </child>
                             <child>
-                              <object class="GtkLabel" id="label31">
+                              <object class="GtkLabel" id="label">
                                 <property name="visible">True</property>
                                 <property name="label" translatable="yes">Total Neto</property>
                               </object>
@@ -2340,7 +2341,6 @@
                   <object class="GtkEntry" id="barcode_entry">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
-                    <signal handler="on_barcode_entry_activate" name="activate"/>
                   </object>
                   <packing>
                     <property name="expand">False</property>
